--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ img {
 }
 
 /* Header */
-header {
+.header-main {
   border-bottom: 1px solid #e7e9fc;
 }
 .logo {
@@ -86,6 +86,7 @@ header {
 .header-container {
   display: flex;
   align-items: center;
+  padding: 0 15px 0 15px;
 }
 .header-list {
   display: flex;
@@ -120,7 +121,6 @@ header {
 /* Main */
 .buner {
   background: var(--black-color);
-  margin: 0 auto;
 }
 .buner_btn {
   display: block;
