--- a/css/styles.css
+++ b/css/styles.css
@@ -125,16 +125,20 @@ img {
 }
 .buner_btn {
   display: block;
+  min-width: 169px;
+  height: 56px;
+  bottom: none;
   margin-left: auto;
   margin-right: auto;
   cursor: pointer;
+  border-radius: 4px;
   font-weight: 500;
   font-size: 16px;
   text-align: center;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: var(--white-color);
-  background: var(--blue-color);
+  background-color: var(--blue-color);
 }
 .buner_btn_text {
   font-weight: 500;
