--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ img {
   padding: 188px 0;
 }
 .buner_btn {
+  border: none;
   display: block;
   min-width: 169px;
   height: 56px;
@@ -163,6 +164,9 @@ img {
 /* Our Ruls */
 .container-ruls {
   display: flex;
+}
+.our_ruls {
+  padding: 120px 0;
 }
 .our_ruls_list {
   background-color: var(--white-color);
