--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ section {
   padding-bottom: 120px;
 }
 body {
-  width: 1158px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -150,6 +149,7 @@ img {
   color: var(--white-color);
 }
 .buner_h {
+  margin: 0 auto;
   max-width: 496px;
   margin-bottom: 48px;
   text-align: center;
