--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ img {
   color: var(--black-color);
 }
 .header-container {
+  margin: 0 auto;
   display: flex;
   align-items: center;
   padding: 0 15px 0 15px;
@@ -259,7 +260,7 @@ img {
 }
 .our_prj_cards {
   border-bottom: 1px solid #e7e9fc;
-  width: calc((100% -48px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 .our_app {
   padding: 32px 16px;
@@ -274,8 +275,7 @@ img {
   color: var(--black-color);
   margin-bottom: 8px;
 }
-/* .our_prj_app_text {
-} */
+
 /* Footer */
 .footer_main {
   background-color: var(--black-color);
