--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ img {
 
 .container {
   width: 1158px;
+  padding: 0 15px 0 15px;
+  margin: 0 auto;
 }
 
 /* Header */
@@ -83,10 +85,8 @@ img {
   color: var(--black-color);
 }
 .header-container {
-  margin: 0 auto;
   display: flex;
   align-items: center;
-  padding: 0 15px 0 15px;
 }
 .header-list {
   display: flex;
@@ -112,7 +112,7 @@ img {
   color: var(--text-color);
 }
 .address {
-  margin-left: 332px;
+  margin-left: auto;
   font-size: 16px;
   font-style: normal;
   color: var(--text-color);
@@ -168,11 +168,8 @@ img {
   padding: 120px 0;
 }
 .our_ruls_list {
-  background-color: var(--white-color);
   display: flex;
   gap: 24px;
-  margin-top: 120px;
-  margin-left: 156px;
 }
 .our_ruls_list_li {
   width: calc((100% - 72px) / 4);
@@ -257,7 +254,6 @@ img {
   margin-bottom: 72px;
 }
 .our_prj_cards {
-  border-bottom: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
 }
 .our_app {
@@ -298,4 +294,5 @@ img {
 }
 .footer_text {
   color: var(--footer-text-color);
+  max-width: 264px;
 }
